objects/BenefitAssignment.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <formula>MaximumBenefitAmount - Utilized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_18_Digit_ID__c</fullName>
        <description>WHAT: 18 Digit Id for Benefit Assignment records
WHO: Brian Ricter | Q Branch
WHEN: 242.1</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BA - 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <formula>Benefit.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <defaultValue>40</defaultValue>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilized__c</fullName>
        <label>Utilized</label>
        <summarizedField>BenefitDisbursement.DisbursedQuantity</summarizedField>
        <summaryFilterItems>
            <field>BenefitDisbursement.DisbursementStatus</field>
            <operation>equals</operation>
            <value>Attended, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>BenefitDisbursement.BenefitAssignmentId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>